made changes to 4

--- a/102 Class04.html
+++ b/102 Class04.html
@@ -33,7 +33,7 @@
                   </ul>
 
          <h2><strong>What is a semantic element?</strong></h2>
-               </p>A semantic element clearly describes its meaning to both the browser and the developer.</p>
+               </p>A semantic element clearly describes its meaning to both the browser and the developer.</
 
 
       <footer>Ariesha Murray</footer>
