--- a/index.html
+++ b/index.html
@@ -4,12 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 1</title>
+    <style>
+        .headerStyle {
+            background-color:blueviolet;
+            color: azure;
+
+        }
+    </style>
 </head>
 <body>
-<header> Ariesha Murray</header>
-<main> Something Special</main>
+<header> Let's get ready to Code?</header>
+<main> 
+    <h1 class="headerStyle">Class 1 Lab</h1>
+
+    <p style="background-color: blue; color: antiquewhite">Do you want to learn how to code?</p>
+    <p style=" background-color: green; color: bisque;">What language do you want to start with?</p>
+    <p style="background-color: black; color: blanchedalmond;"> What system are you using?</p>
+    <p style="background-color: blueviolet; color: bisque;">What is your coding level?</p>
+
+</main>
 <footer> Ariesha Murray</footer>
 
-prompt ("Do you want to learn how to code?")
-</body>
+<script>
+    let response1 = prompt("Do you want to learn how to code?");
+    // console.log(response1);
+    
+    let response2 = prompt("What language do you want to start with?");
+    // console.log(response2);
+
+    let response3 = prompt("What system are you using?");
+    // console.log(response3);
+
+    let response4 = prompt("What is your coding level?");
+    // console.log(response4);
+
+    alert("Let's get ready to code");
+
+</script>
+<!-- Note: could style the h1 element itself instead of by class -->
+</body> 
 </html>
